# aws-blog.de-projects

./: LICENSE  README.md  package-lock.json
airflow-athena-aggregation/: README.md  daily_sales_aggregation.py  monthly_sales_aggregation.py
async-boto3/: aioboto3_demo.py  async_example.py  lambda_function.py  requirements.txt
boto3-autocomplete/: all-requirements.txt  aws_script.py  requirements.txt
cdk-aurora-migration-demo/: app.py  configuration.ini  setup.py
cdk-cross-stack-references/: README.md  app.py  setup.py  step1.yml  step2.yml  step3.yml  step4.yml
cdk-dynamodb-large-items/: README.md  app.py  result.csv  setup.py
cdk-lambda-destinations/: README.md  app.py
cdk-lambda-filter-sqs/: .gitignore  README.md  app.py  constants.py  get_result.py  job_generator.py  requirements.txt
cdk-pipeline-slackops/: app.py  setup.py
cdk-python-lambda-init/: README.md  app.py  setup.py
cdk-s3-encryption/: README.md  app.py  setup.py
cdk-s3-sns-latency/: app.py  script.md  setup.py
cloudfront-lambda-at-edge/: lambda_at_edge_regions.py
cognito-machine-to-machine-authentication/: .gitignore  Readme.md  auth_demo.py  handler.py  package-lock.json  package.json  (+3 more)
genai-alt-texts-for-markdown/: .gitignore  README.md  pyproject.toml
genai-alt-texts-for-markdown/src/: discover_image_links.py  generate_alt_tags.py  metadata.py  update_image_links.py
genai-alt-texts-for-markdown/tests/assets/articles/: article_with_alt_texts.md  article_with_missing_images.md  article_with_partial_alt_texts.md  article_without_alt_texts.md  article_without_image_links.md
(+149 files in other folders)
